# world-time-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  cross-compilation  cross-compilation.txt
.cargo/: config
Europe/: London.json
src/: main.rs
timezones/Europe/: Paris.json
