[package]
name = "world-time-api"
version = "1.2.2"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
description = "A world time API. Dockerfile provided."
keywords = ["time", "world", "API"]
categories = ["date-and-time"]
license = "MIT"
repository = "https://github.com/nicolasbauw/world-time-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies]
libtzfile = { version = "2.0", features=["json"] }
