[package]
name = "world-time-api"
version = "1.3.0"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2021"
description = "A world time API."
keywords = ["time", "world", "API"]
categories = ["date-and-time"]
license = "MIT"
repository = "https://github.com/nicolasbauw/world-time-api"
readme = "README.md"
exclude = ["Dockerfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies]
libtzfile = { version = "2.0", features=["json"] }
